<resources>
    <string name="app_name">FirebaseAuthApp</string>
    <string name="seb_s_app">Seb\'s App</string>
    <string name="seb_s_awesome_app">Seb\'s Awesome App</string>
    <string name="gf_beer_hub">GF Beer Hub</string>
    <string name="seb_s_awesome_app2">Seb\'s awesome app</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">Register User</string>
</resources>